--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -800,6 +800,7 @@ fos_js_routing:
         - api_time_slots_delete_item
         - admin_transporter_message
         - api_organizations_get_collection
+        - api_time_slots_get_collection
 
 webpack_encore:
     output_path: '%kernel.project_dir%/web/build'
