--- a/app/config/services/serializer.yml
+++ b/app/config/services/serializer.yml
@@ -128,3 +128,8 @@ services:
       $normalizer: "@serializer.normalizer.object"
       $secret: '%secret%'
     tags: [ { name: serializer.normalizer, priority: 128 } ]
+
+  AppBundle\Serializer\PatchAwareStoreNormalizer:
+    arguments:
+      $normalizer: "@api_platform.jsonld.normalizer.item"
+    tags: [ { name: serializer.normalizer, priority: 128 } ]
