--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -788,6 +788,7 @@ services:
       $country: '%country_iso%'
       $locale: '%env(COOPCYCLE_LOCALE)%'
       $splitTermsAndConditionsAndPrivacyPolicy: '%env(SPLIT_TERMS_AND_CONDITIONS_AND_PRIVACY_POLICY)%'
+      $edenredClientId: '%env(EDENRED_AUTHENTICATION_CLIENT_ID)%'
 
   AppBundle\Transporter\ImportFromPoint: ~
   AppBundle\Transporter\ReportFromCC: ~
