Add endpoint to update Edenred credentials.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1000,6 +1000,7 @@ services:
   AppBundle\Api\DataTransformer\TourInputDataTransformer: ~
   AppBundle\Api\DataTransformer\UpdateLoopeatFormatsDataTransformer: ~
   AppBundle\Api\DataTransformer\UpdateLoopeatReturnsDataTransformer: ~
+  AppBundle\Api\DataTransformer\EdenredCredentialsInputDataTransformer: ~
 
   AppBundle\Api\DataTransformer\CartItemInputDataTransformer:
     arguments:
