feat: add base management screen for warehouses

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -802,6 +802,9 @@ fos_js_routing:
         - admin_transporter_message
         - api_organizations_get_collection
         - api_time_slots_get_collection
+        - api_warehouses_post_collection
+        - api_warehouses_get_collection
+        - api_warehouses_delete_item
 
 webpack_encore:
     output_path: '%kernel.project_dir%/web/build'
