--- a/src/Resources/config/routing/admin.yml
+++ b/src/Resources/config/routing/admin.yml
@@ -575,6 +575,16 @@ admin_store_deliveries:
             import_success: admin_deliveries
     methods:  [ GET, POST ]
 
+admin_store_deliveries_bookmarks:
+  path: /admin/stores/{id}/deliveries/bookmarks
+  defaults:
+    _controller: AppBundle\Controller\AdminController::storeDeliveriesBookmarksAction
+    layout: 'admin.html.twig'
+    routes:
+      stores: admin_stores
+      store: admin_store
+  methods:  [ GET ]
+
 admin_store_delivery_new:
     path: /admin/stores/{id}/deliveries/new
     defaults:
