--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -865,6 +865,7 @@ services:
     public: true
     arguments:
       $cashEnabled: '%env(bool:CASH_ON_DELIVERY_ENABLED)%'
+      $edenredEnabled: '%env(bool:EDENRED_ENABLED)%'
 
   AppBundle\Action\Order\Centrifugo:
     public: true
