feat: add UI to set trailers and vehicles

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -812,6 +812,7 @@ fos_js_routing:
         - api_vehicles_get_collection
         - api_vehicles_delete_item
         - admin_warehouses
+        - api_task_lists_patch_item
 
 webpack_encore:
     output_path: '%kernel.project_dir%/web/build'
