feat: add vehicle/trailer edit ability

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -813,6 +813,8 @@ fos_js_routing:
         - api_vehicles_delete_item
         - admin_warehouses
         - api_task_lists_patch_item
+        - api_vehicles_patch_item
+        - api_trailers_patch_item
 
 webpack_encore:
     output_path: '%kernel.project_dir%/web/build'
