refactoring: renamed NewOrderType into NewCustomOrderType

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -54,7 +54,7 @@ services:
     autoconfigure: false
     tags: [ form.type ]
 
-  AppBundle\Form\NewOrderType:
+  AppBundle\Form\NewCustomOrderType:
     parent: AppBundle\Form\DeliveryType
     autowire: false
     autoconfigure: false
