refactoring: use dedicated type in 'New delivery' and 'Existing delivery' forms

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -60,6 +60,14 @@ services:
     autoconfigure: false
     tags: [ form.type ]
 
+  AppBundle\Form\Order\NewOrderType:
+    parent: AppBundle\Form\DeliveryType
+    tags: [ form.type ]
+
+  AppBundle\Form\Order\OneOffOrderType:
+    parent: AppBundle\Form\DeliveryType
+    tags: [ form.type ]
+
   AppBundle\Form\OrderType:
     arguments: [ '@sm.factory', '@security.authorization_checker' ]
     tags: [ form.type ]
