feat(barcode): introduce `Barcode` & `BarcodeUtils` class
- Add a barcode library to composer
- Add "smart" getters to Task entity
- Add endpoint to generate labels in pdf
- Label twig template

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1428,3 +1428,6 @@ services:
     arguments: [
       '@edenredsynchronizer.client',
     ]
+
+  Picqer\Barcode\BarcodeGeneratorSVG: ~
+  AppBundle\Utils\Barcode\BarcodeUtils: ~
