wip: added: 'Modify subscription' page

--- a/app/config/services/forms.yml
+++ b/app/config/services/forms.yml
@@ -68,6 +68,10 @@ services:
     parent: AppBundle\Form\DeliveryType
     tags: [ form.type ]
 
+  AppBundle\Form\Order\SubscriptionType:
+    parent: AppBundle\Form\DeliveryType
+    tags: [ form.type ]
+
   AppBundle\Form\OrderType:
     arguments: [ '@sm.factory', '@security.authorization_checker' ]
     tags: [ form.type ]
