Introduce Paygreen, allow configuring credentials.

--- a/.env.dist
+++ b/.env.dist
@@ -121,3 +121,5 @@ TRANSPORTERS_CONFIG={}
 ODOO_URL=
 EDENRED_SYNCHRONIZER_BASE_URL=https://edenred-synchronizer.coopcycle.org/api/
 EDENRED_SYNCHRONIZER_API_KEY=
+PAYGREEN_ENVIRONMENT=SANDBOX
+PAYGREEN_ENABLED=0
