--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "downshift": "^7.0.4",
     "dropzone": "^5.9.3",
     "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-jest": "^24.7.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-storybook": "^0.6.15",
