--- a/cypress/fixtures/stores.yml
+++ b/cypress/fixtures/stores.yml
@@ -49,7 +49,7 @@ AppBundle\Entity\Store:
     timeSlot: '@time_slot_1'
 
 AppBundle\Entity\User:
-  default_user:
+  storeOwner:
     __factory:
       '@Nucleos\UserBundle\Util\UserManipulator::create':
         - 'store_1'
@@ -59,6 +59,15 @@ AppBundle\Entity\User:
         - false
     roles: [ 'ROLE_USER', 'ROLE_STORE' ]
     stores: [ '@store_1' ]
+  admin:
+    __factory:
+      '@Nucleos\UserBundle\Util\UserManipulator::create':
+        - 'admin'
+        - '12345678'
+        - 'admin@demo.coopcycle.org'
+        - true
+        - false
+    roles: [ 'ROLE_ADMIN' ]
 
 AppBundle\Entity\Sylius\Product:
   on_demand_delivery:
