--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,13 @@
 .idea
 *.iml
 
+.vscode
+
 # docker-sync stuff
 .docker-sync
+
+# helm stuff
+**/charts/*.tgz
 
 .env
 *.env.local
@@ -55,4 +60,3 @@
 
 .phpactor.json
 
-.vscode
