--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -79,12 +79,14 @@ CMD [ "frankenphp", "run", "--config", "/etc/caddy/Caddyfile", "--watch" ]
 FROM frankenphp_base AS frankenphp_prod
 
 ENV APP_ENV=prod
-ENV FRANKENPHP_CONFIG="import worker.Caddyfile"
+#FIXME:
+#ENV FRANKENPHP_CONFIG="import worker.Caddyfile"
 
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 COPY --link frankenphp/conf.d/app.prod.ini $PHP_INI_DIR/conf.d/
-COPY --link frankenphp/worker.Caddyfile /etc/caddy/worker.Caddyfile
+#FIXME: see above
+#COPY --link frankenphp/worker.Caddyfile /etc/caddy/worker.Caddyfile
 
 # prevent the reinstallation of vendors at every changes in the source code
 COPY --link composer.* symfony.* ./
@@ -98,6 +100,24 @@ RUN rm -Rf frankenphp/
 RUN set -eux; \
 	mkdir -p var/cache var/log; \
 	composer dump-autoload --classmap-authoritative --no-dev; \
-	composer dump-env prod; \
+#FIXME; requires symfony/flex
+#	composer dump-env prod; \
 	composer run-script --no-dev post-install-cmd; \
 	chmod +x bin/console; sync;
+
+
+# download and install Node.js via nvm (Node Version Manager)
+ENV NODE_VERSION 20
+SHELL ["/bin/bash", "--login", "-c"]
+RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.39.7/install.sh | bash
+RUN nvm install $NODE_VERSION
+
+# Install JS dependencies
+RUN npm ci
+
+ENV NODE_ENV=production
+# Compile JS SDK for production
+RUN npm run sdk:build
+# Compile JS assets for production
+RUN node_modules/.bin/encore production && \
+    cp web/js/coopcycle.js web/build
