--- a/cypress/fixtures/stores.yml
+++ b/cypress/fixtures/stores.yml
@@ -47,6 +47,14 @@ AppBundle\Entity\Store:
     enabled: true
     pricingRuleSet: '@pricing_rule_set_1'
     timeSlot: '@time_slot_1'
+    createOrders: true
+  store_do_not_create_orders:
+    name: 'Store with createOrders disabled'
+    address: "@address_1"
+    enabled: true
+    pricingRuleSet: '@pricing_rule_set_1'
+    timeSlot: '@time_slot_1'
+    createOrders: false
 
 AppBundle\Entity\User:
   storeOwner:
