added: test create delivery flow with createOrders enabled

--- a/cypress/fixtures/stores.yml
+++ b/cypress/fixtures/stores.yml
@@ -2,6 +2,7 @@ include:
   - settings.yml
   - sylius_channels.yml
   - sylius_taxation.yml
+  - payment_methods.yml
 
 AppBundle\Entity\Base\GeoCoordinates:
   geo_1:
