--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@ APP_DEBUG=1
 APP_SECRET=ThisTokenIsNotSoSecretChangeIt
 APP_HOST=nginx
 GOOGLE_API_KEY=
-S3_ENDPOINT=http://minio:9000
+S3_ENDPOINT=minio:9000
 S3_REGION=fr-fr
 S3_BUCKET=images
 S3_CREDENTIALS_KEY=minio
