added: typesense chart

--- a/helm/typesense/templates/deployment.yaml
+++ b/helm/typesense/templates/deployment.yaml
@@ -36,6 +36,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: TYPESENSE_API_KEY
+              value: {{ .Values.typeSense.apiKey }}
+            - name: TYPESENSE_DATA_DIR
+              value: {{ .Values.typeSense.dataDir }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
