added: redis chart

--- a/helm/redis/values.yaml
+++ b/helm/redis/values.yaml
@@ -4,13 +4,6 @@
 
 replicaCount: 1
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
@@ -105,3 +98,10 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# Full configuration: https://github.com/bitnami/charts/tree/main/bitnami/redis
+redis:
+  enabled: true
+  architecture: standalone
+  auth:
+    enabled: false
