--- a/helm/redis/Chart.yaml
+++ b/helm/redis/Chart.yaml
@@ -21,4 +21,10 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "1.0.0"
+
+dependencies:
+  - name: redis
+    version: ~19.6.1
+    repository: https://charts.bitnami.com/bitnami/
+    condition: redis.enabled
