--- a/helm/osrm/templates/deployment.yaml
+++ b/helm/osrm/templates/deployment.yaml
@@ -36,6 +36,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: OSRM_FILENAME
+              value: data.osrm
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
