--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -765,6 +765,9 @@ services:
   AppBundle\Api\EventSubscriber\PricingRuleSetDeleteSubscriber:
     tags: [ 'kernel.event_subscriber' ]
 
+  AppBundle\Api\EventSubscriber\WarehouseDeleteSubscriber:
+    tags: [ 'kernel.event_subscriber' ]
+
   AppBundle\Api\EventSubscriber\TimeSlotDeleteSubscriber:
     tags: [ 'kernel.event_subscriber' ]
 
