--- a/helm/php/templates/deployment.yaml
+++ b/helm/php/templates/deployment.yaml
@@ -134,22 +134,22 @@ spec:
                   name: {{ include "api-platform.fullname" . }}
                   key: mercure-jwt-secret
             - name: COOPCYCLE_REDIS_DSN
-              value: redis://coopcycle-redis-master
+              value: redis://coopcycle-web-redis-master
 {{/*              value: redis://redis:6379*/}}
             - name: MESSENGER_TRANSPORT_DSN
-              value: redis://coopcycle-redis-master/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1
+              value: redis://coopcycle-web-redis-master/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1
 {{/*              value: redis://redis:6379/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1*/}}
             - name: S3_ENDPOINT
               value: http://coopcycle-web-minio:9000
 {{/*              value: http://minio:9000*/}}
             - name: COOPCYCLE_TILE38_DSN
-              value: redis://coopcycle-tile38:9851
+              value: redis://coopcycle-web-tile38:9851
 {{/*              value: redis://tile38:9851*/}}
             - name: TYPESENSE_HOST
-              value: coopcycle-typesense
+              value: coopcycle-web-typesense
 {{/*              value: typesense*/}}
             - name: CENTRIFUGO_API_URL
-              value: http://centrifugo:9000/api
+              value: http://coopcycle-web-centrifugo:9000/api
 {{/*              value: http://centrifugo:8000/api*/}}
           ports:
             - name: http
