--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,35 +55,35 @@ jobs:
         run: docker compose pull --ignore-pull-failures
       - name: Prepare OSRM data
         run: |
-          docker-compose run -T --rm osrm wget --no-check-certificate https://coopcycle-assets.sfo2.digitaloceanspaces.com/osm/paris-france.osm.pbf -O /data/data.osm.pbf
-          docker-compose run -T --rm osrm osrm-extract -p /opt/bicycle.lua /data/data.osm.pbf
-          docker-compose run -T --rm osrm osrm-partition /data/data.osrm
-          docker-compose run -T --rm osrm osrm-customize /data/data.osrm
+          docker compose run -T --rm osrm wget --no-check-certificate https://coopcycle-assets.sfo2.digitaloceanspaces.com/osm/paris-france.osm.pbf -O /data/data.osm.pbf
+          docker compose run -T --rm osrm osrm-extract -p /opt/bicycle.lua /data/data.osm.pbf
+          docker compose run -T --rm osrm osrm-partition /data/data.osrm
+          docker compose run -T --rm osrm osrm-customize /data/data.osrm
       - name: Start Docker containers
-        run: docker-compose up -d
+        run: docker compose up -d
       - name: Wait for PHP-FPM
-        run: until docker inspect --format='{{ .State.Health.Status }}' $(docker-compose ps -q php) | grep -wq healthy; do sleep 5; done
+        run: until docker inspect --format='{{ .State.Health.Status }}' $(docker compose ps -q php) | grep -wq healthy; do sleep 5; done
         timeout-minutes: 2
       - name: Show PHP logs
         if: always()
-        run: docker-compose logs php
+        run: docker compose logs php
       - name: Create database
-        run: docker-compose exec -T php bin/console doctrine:schema:create --env=test
+        run: docker compose exec -T php bin/console doctrine:schema:create --env=test
       - name: Create typesense collections
-        run: docker-compose exec -T php bin/console typesense:create --env=test
+        run: docker compose exec -T php bin/console typesense:create --env=test
       - name: Validate database schema
-        run: docker-compose exec -T php bin/console doctrine:schema:validate --env=test --skip-sync
+        run: docker compose exec -T php bin/console doctrine:schema:validate --env=test --skip-sync
       - name: Run PHPUnit
         run: |
           cp phpunit.xml.dist phpunit.xml
-          docker-compose exec -T php vendor/bin/phpunit
+          docker compose exec -T php vendor/bin/phpunit
       - name: Run Behat
-        run: docker-compose exec -T php vendor/bin/behat -f progress
+        run: docker compose exec -T php vendor/bin/behat -f progress
       - name: Show Symfony logs on failure
         if: ${{ failure() }}
-        run: docker-compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep CRITICAL
+        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep CRITICAL
       - name: Run Jest
-        run: docker-compose exec -T webpack npm run jest
+        run: docker compose exec -T webpack npm run jest
   E2E:
     name: Run end to end tests with cypress
     runs-on: ubuntu-latest
@@ -100,13 +100,13 @@ jobs:
       - name: Create .env file
         run: cp .env.dist .env
       - name: Pull Docker images
-        run: docker-compose pull --ignore-pull-failures
+        run: docker compose pull --ignore-pull-failures
       - name: Prepare OSRM data
         run: |
-          docker-compose run -T --rm osrm wget --no-check-certificate https://coopcycle-assets.sfo2.digitaloceanspaces.com/osm/paris-france.osm.pbf -O /data/data.osm.pbf
-          docker-compose run -T --rm osrm osrm-extract -p /opt/bicycle.lua /data/data.osm.pbf
-          docker-compose run -T --rm osrm osrm-partition /data/data.osrm
-          docker-compose run -T --rm osrm osrm-customize /data/data.osrm
+          docker compose run -T --rm osrm wget --no-check-certificate https://coopcycle-assets.sfo2.digitaloceanspaces.com/osm/paris-france.osm.pbf -O /data/data.osm.pbf
+          docker compose run -T --rm osrm osrm-extract -p /opt/bicycle.lua /data/data.osm.pbf
+          docker compose run -T --rm osrm osrm-partition /data/data.osrm
+          docker compose run -T --rm osrm osrm-customize /data/data.osrm
       # Cypress GitHub Action uses npm ci, and it causes a "permission denied" error,
       # because it tries to remove the node_modules/ folder, which is mounted with root:root
       # We create the node_modules/ folder *BEFORE* starting the containers,
@@ -114,15 +114,15 @@ jobs:
       - name: Create node_modules directory
         run: mkdir node_modules
       - name: Start Docker containers
-        run: docker-compose up -d
+        run: docker compose up -d
       - name: Wait for PHP-FPM
-        run: until docker inspect --format='{{ .State.Health.Status }}' $(docker-compose ps -q php) | grep -wq healthy; do sleep 5; done
+        run: until docker inspect --format='{{ .State.Health.Status }}' $(docker compose ps -q php) | grep -wq healthy; do sleep 5; done
       - name: Create database
-        run: docker-compose exec -T php bin/console doctrine:schema:create --env=test
+        run: docker compose exec -T php bin/console doctrine:schema:create --env=test
       - name: Create typesense collections
-        run: docker-compose exec -T php bin/console typesense:create --env=test
+        run: docker compose exec -T php bin/console typesense:create --env=test
       - name: Setup CoopCycle
-        run: docker-compose exec -T php bin/console coopcycle:setup --env=test
+        run: docker compose exec -T php bin/console coopcycle:setup --env=test
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
