feat: try to get symfony logs on cypress fail

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -140,6 +140,9 @@ jobs:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+      - name: Show Symfony logs on failure
+        if: failure()
+        run: docker compose exec -T php cat var/logs/test-$(date +'%Y-%m-%d').log | grep CRITICAL
   COMPONENT:
     name: Run component tests with Cypress
     runs-on: ubuntu-latest
