--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -48,17 +48,33 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: nested
+            handler: forward_fingers_crossed
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
-        nested:
+        forward_fingers_crossed:
+          type: group
+          members: [ default_file, logs_to_upload ]
+        default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
             level: debug
             formatter: monolog.formatter.json
             max_files: 7
             channels: ["!api", "!stripe", "!loopeat"]
+        forward_channels:
+            type: group
+            members: [ logs_to_upload ]
+            channels: [ checkout, coopcycle.order_processing ]
+        logs_to_upload:
+            # includes messages:
+            # channels listed in forward_channels: persist all messages
+            # for other channels: `fingers_crossed` is applied
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
+            level: debug
+            formatter: monolog.formatter.json
+            max_files: 2
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
