refactoring; dependencies setup

--- a/helm/php/Chart.yaml
+++ b/helm/php/Chart.yaml
@@ -25,9 +25,23 @@ version: 0.1.0
 appVersion: 0.1.0
 
 dependencies:
+  # dev-only dependency
+  - name: postgresql
+    version: ~14.3.1
+    repository: https://charts.bitnami.com/bitnami/
+    condition: postgresql.enabled
+  # dev-only dependency
+  - name: minio
+    version: ~14.0.0
+    repository: https://charts.bitnami.com/bitnami/
+    condition: minio.enabled
   - name: redis
-    version: 19.6.0
-    repository: "file://../redis"
+    version: ~19.6.1
+    repository: https://charts.bitnami.com/bitnami/
+    condition: redis.enabled
+  - name: centrifugo
+    version: 8.0.0
+    repository: https://centrifugal.github.io/helm-charts
   - name: tile38
     version: 1.33.1
     repository: "file://../tile38"
@@ -37,9 +51,6 @@ dependencies:
   - name: osrm
     version: 0.1.0
     repository: "file://../osrm"
-  - name: centrifugo
-    version: 8.0.0
-    repository: "file://../centrifugo"
   - name: mjml
     version: 2.4.0
     repository: "file://../mjml"
