--- a/helm/php/templates/secrets.yaml
+++ b/helm/php/templates/secrets.yaml
@@ -7,14 +7,16 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.postgresql.enabled }}
-  database-url: {{ printf "pgsql://%s:%s@%s/%s?serverVersion=16&charset=utf8" .Values.postgresql.auth.username .Values.postgresql.auth.password .Values.postgresql.host .Values.postgresql.auth.database | b64enc | quote }}
+  database-url: {{ printf "pgsql://%s:%s@%s-postgresql/%s?serverVersion=16&charset=utf8" .Values.postgresql.global.postgresql.auth.username .Values.postgresql.global.postgresql.auth.password .Release.Name .Values.postgresql.global.postgresql.auth.database | b64enc | quote }}
+  database-host: {{ printf "%s-postgresql" .Release.Name | b64enc | quote }}
   {{- else }}
   database-url: {{ .Values.postgresql.url | b64enc | quote }}
+  database-host: {{ .Values.postgresql.global.postgresql.host | b64enc | quote }}
   {{- end }}
-  database-host: {{ .Values.postgresql.host | b64enc | quote }}
-  database-port: {{ .Values.postgresql.port | b64enc | quote }}
-  database-name: {{ .Values.postgresql.auth.database | b64enc | quote }}
-  database-user: {{ .Values.postgresql.auth.username | b64enc | quote }}
-  database-password: {{ .Values.postgresql.auth.password | b64enc | quote }}
+  database-port: {{ .Values.postgresql.global.postgresql.port | b64enc | quote }}
+  database-name: {{ .Values.postgresql.global.postgresql.auth.database | b64enc | quote }}
+  database-user: {{ .Values.postgresql.global.postgresql.auth.username | b64enc | quote }}
+  database-password: {{ .Values.postgresql.global.postgresql.auth.password | b64enc | quote }}
+
   php-app-secret: {{ .Values.php.appSecret | default (randAlphaNum 40) | b64enc | quote }}
   mercure-jwt-secret: {{ .Values.mercure.jwtSecret | default (randAlphaNum 40) | b64enc | quote }}
