--- a/helm/coopcycle-platform/templates/deployment.yaml
+++ b/helm/coopcycle-platform/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "api-platform.fullname" . }}
+  name: {{ include "coopcycle-platform.fullname" . }}
   labels:
-    {{- include "api-platform.labels" . | nindent 4 }}
+    {{- include "coopcycle-platform.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "api-platform.selectorLabels" . | nindent 6 }}
+      {{- include "coopcycle-platform.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
@@ -20,13 +20,13 @@ spec:
           {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "api-platform.selectorLabels" . | nindent 8 }}
+        {{- include "coopcycle-platform.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "api-platform.serviceAccountName" . }}
+      serviceAccountName: {{ include "coopcycle-platform.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -41,115 +41,115 @@ spec:
             - name: MERCURE_PUBLISHER_JWT_KEY
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-jwt-secret
             - name: MERCURE_SUBSCRIBER_JWT_KEY
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-jwt-secret
             - name: TRUSTED_HOSTS
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-trusted-hosts
             - name: TRUSTED_PROXIES
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-trusted-proxies
             - name: APP_ENV
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-app-env
             - name: APP_DEBUG
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-app-debug
             - name: APP_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-app-secret
             - name: CORS_ALLOW_ORIGIN
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: php-cors-allow-origin
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-url
             - name: COOPCYCLE_DB_HOST
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-host
             - name: COOPCYCLE_DB_PORT
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-port
             - name: COOPCYCLE_DB_NAME
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-name
             - name: COOPCYCLE_DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-user
             - name: COOPCYCLE_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: database-password
             - name: CADDY_GLOBAL_OPTIONS
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: caddy-global-options
             - name: MERCURE_URL
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-url
             - name: MERCURE_PUBLIC_URL
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-public-url
             - name: MERCURE_EXTRA_DIRECTIVES
               valueFrom:
                 configMapKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-extra-directives
             - name: MERCURE_JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "api-platform.fullname" . }}
+                  name: {{ include "coopcycle-platform.fullname" . }}
                   key: mercure-jwt-secret
             - name: COOPCYCLE_REDIS_DSN
-              value: redis://coopcycle-web-redis-master
+              value: redis://coopcycle-platform-redis-master
 {{/*              value: redis://redis:6379*/}}
             - name: MESSENGER_TRANSPORT_DSN
-              value: redis://coopcycle-web-redis-master/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1
+              value: redis://coopcycle-platform-redis-master/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1
 {{/*              value: redis://redis:6379/coopcycle:messages/coopcycle/coopcycle:consumer?delete_after_ack=1*/}}
             - name: S3_ENDPOINT
-              value: http://coopcycle-web-minio:9000
+              value: http://coopcycle-platform-minio:9000
 {{/*              value: http://minio:9000*/}}
             - name: COOPCYCLE_TILE38_DSN
-              value: redis://coopcycle-web-tile38:9851
+              value: redis://coopcycle-platform-tile38:9851
 {{/*              value: redis://tile38:9851*/}}
             - name: TYPESENSE_HOST
-              value: coopcycle-web-typesense
+              value: coopcycle-platform-typesense
 {{/*              value: typesense*/}}
             - name: CENTRIFUGO_API_URL
-              value: http://coopcycle-web-centrifugo:9000/api
+              value: http://coopcycle-platform-centrifugo:9000/api
 {{/*              value: http://centrifugo:8000/api*/}}
           ports:
             - name: http
