--- a/helm/coopcycle-platform/templates/secrets.yaml
+++ b/helm/coopcycle-platform/templates/secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "api-platform.fullname" . }}
+  name: {{ include "coopcycle-platform.fullname" . }}
   labels:
-    {{- include "api-platform.labels" . | nindent 4 }}
+    {{- include "coopcycle-platform.labels" . | nindent 4 }}
 type: Opaque
 data:
   {{- if .Values.postgresql.enabled }}
