--- a/helm/coopcycle-platform/templates/service.yaml
+++ b/helm/coopcycle-platform/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "api-platform.fullname" . }}
+  name: {{ include "coopcycle-platform.fullname" . }}
   labels:
-    {{- include "api-platform.labels" . | nindent 4 }}
+    {{- include "coopcycle-platform.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "api-platform.selectorLabels" . | nindent 4 }}
+    {{- include "coopcycle-platform.selectorLabels" . | nindent 4 }}
