--- a/helm/coopcycle-platform/templates/serviceaccount.yaml
+++ b/helm/coopcycle-platform/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "api-platform.serviceAccountName" . }}
+  name: {{ include "coopcycle-platform.serviceAccountName" . }}
   labels:
-    {{- include "api-platform.labels" . | nindent 4 }}
+    {{- include "coopcycle-platform.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
