--- a/src/Resources/config/taxation.yml
+++ b/src/Resources/config/taxation.yml
@@ -41,6 +41,8 @@ service:
     # https://en.wikipedia.org/wiki/ISO_3166-2:BR
     br-rs:
       icms: 0.17
+    gh:
+      standard: 0.125
 
 service_tax_exempt:
   rates:
@@ -81,6 +83,8 @@ service_tax_exempt:
     co:
       zero: 0.0
     br-rs:
+      zero: 0.0
+    gh:
       zero: 0.0
 
 drink:
@@ -165,6 +169,8 @@ base_standard:
     # https://en.wikipedia.org/wiki/ISO_3166-2:BR
     br-rs:
       icms: 0.17
+    gh:
+      standard: 0.125
 
 base_intermediary:
   rates:
@@ -191,6 +197,8 @@ base_intermediary:
       intermediary: 0.18
     pt:
       intermediary: 0.13
+    gh:
+      intermediary: 0.05
 
 base_reduced:
   rates:
@@ -220,6 +228,8 @@ base_reduced:
       reduced: 0.021
     co:
       reduced: 0.05
+    gh:
+      reduced: 0.03
 
 base_exempt:
   rates:
@@ -261,4 +271,6 @@ base_exempt:
     co:
       zero: 0.00
     br-rs:
+      zero: 0.00
+    gh:
       zero: 0.00
