--- a/features/fixtures/ORM/packages.yml
+++ b/features/fixtures/ORM/packages.yml
@@ -7,16 +7,25 @@ AppBundle\Entity\PackageSet:
 AppBundle\Entity\Package:
   package_small:
     name: 'SMALL'
-    volumeUnits: 1.0
+    maxVolumeUnits: 1.0
+    averageVolumeUnits: 1.0
     packageSet: '@package_set_1'
+    description: ''
+    short_code: 'AB'
   package_xl:
     name: 'XL'
-    volumeUnits: 3.0
+    maxVolumeUnits: 3.0
+    averageVolumeUnits: 3.0
     packageSet: '@package_set_1'
+    description: ''
+    short_code: 'AB'
   package_small2:
     name: 'SMALL'
-    volumeUnits: 1.0
+    maxVolumeUnits: 1.0
+    averageVolumeUnits: 1.0
     packageSet: '@package_set_2'
+    description: ''
+    short_code: 'AB'
 
 AppBundle\Entity\Base\GeoCoordinates:
   geo_1:
