--- a/features/fixtures/ORM/stores.yml
+++ b/features/fixtures/ORM/stores.yml
@@ -86,12 +86,18 @@ AppBundle\Entity\PackageSet:
 AppBundle\Entity\Package:
   package_small:
     name: 'SMALL'
-    volumeUnits: 1.0
+    maxVolumeUnits: 1.0
+    averageVolumeUnits: 1.0
     packageSet: '@package_set_1'
+    description: ''
+    short_code: 'AB'
   package_xl:
     name: 'XL'
-    volumeUnits: 3.0
+    maxVolumeUnits: 3.0
+    averageVolumeUnits: 3.0
     packageSet: '@package_set_1'
+    description: ''
+    short_code: 'AB'
 
 AppBundle\Entity\Store:
   store_1:
