added: provide image pull secret

--- a/helm/coopcycle-platform/values.yaml
+++ b/helm/coopcycle-platform/values.yaml
@@ -64,7 +64,9 @@ mjml:
 smtp:
   enabled: true
 
-imagePullSecrets: []
+imagePullSecrets:
+   - name: registrykey
+
 nameOverride: ""
 fullnameOverride: ""
 
