--- a/helm/osrm/values.yaml
+++ b/helm/osrm/values.yaml
@@ -11,7 +11,9 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: registrykey
+
 nameOverride: ""
 fullnameOverride: ""
 
